# relm4-template

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  ci-github.yml  ci-gitlab.yml  create-project.py  default.nix  flake.nix  meson.build  meson_options.txt  shell.nix
.github/workflows/: ci.yml
build-aux/: cargo.sh  com.belmoussaoui.GtkRustTemplate.Devel.json  com.belmoussaoui.GtkRustTemplate.json  com.belmoussaoui.GtkRustTemplateDevel.json  com.bilelmoussaoui.GtkRustTemplate.json  com.bilelmoussaoui.GtkRustTemplateDevel.json  dist-vendor.sh  meson_post_install.py
build-aux/.flatpak-builder/checksums/: x86_64-com.bilelmoussaoui.GtkRustTemplateDevel.json
build-aux/.flatpak-builder/git/https_gitlab.gnome.org_bilelmoussaoui_gtk-rust-template.git/: config
data/: com.belmoussaoui.GtkRustTemplate.desktop.in.in  com.belmoussaoui.GtkRustTemplate.gschema.xml.in  com.belmoussaoui.GtkRustTemplate.metainfo.xml.in.in  com.bilelmoussaoui.GtkRustTemplate.appdata.xml.in.in  com.bilelmoussaoui.GtkRustTemplate.gschema.xml.in  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/: resources.gresource.xml
data/resources/ui/: about_dialog.ui.in  menu.ui  shortcuts.ui  window.ui  window.ui.in
gtk3/: Cargo.toml  com.belmoussaoui.GtkRustTemplate.Devel.json  meson.build
gtk3/data/resources/ui/: shortcuts.ui  window.ui
gtk3/src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  static_resources.rs  window.rs  window_state.rs
gtk4/: Cargo.toml  com.belmoussaoui.GtkRustTemplate.Devel.json  meson.build
gtk4/data/resources/ui/: shortcuts.ui
gtk4/src/: application.rs  config.rs.in  main.rs  meson.build  static_resources.rs  static_resources.rs.in  window.rs
hooks/: pre-commit.hook
po/: POTFILES.in
src/: app.rs  application.rs  config.rs  config.rs.in  main.rs  meson.build  setup.rs  static_resources.rs.in  utils.rs  window.rs  window_state.rs
src/application/: imp.rs  mod.rs
src/modals/: about.rs  mod.rs  shortcuts.rs
src/window/: imp.rs  mod.rs
