[package]
name = "gtk-rust-template"
version = "0.1.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"