[package]
name = "gtk-rust-template"
version = "0.1.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.9", features = ["v3_22"] }
glib = "0.10"
gio = { version = "0.9", features = ["v2_46"] }
gdk = "0.13"
log = "0.4"
gtk-macros = "0.2"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.6", features = ["gettext-system"] }
