install_data(
  'com.bilelmoussaoui.GtkRustTemplate.svg',
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps',
  rename: '@0@.svg'.format(application_id)
)

install_data(
  'com.bilelmoussaoui.GtkRustTemplate-symbolic.svg',
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
  rename: '@0@-symbolic.svg'.format(application_id)
)
